fixed responsiveness on small screens

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -24,24 +24,6 @@
     }
   }
 
-  @include mediaSm {
-    main {
-      padding: 2rem;
-      #home h1 {
-        margin-top: 10vh;
-      }
-
-      .lg-heading {
-        margin-top: 1rem;
-        font-size: 5rem;
-      }
-    }
-
-    .projects {
-      grid-template-columns: 1fr;
-    }
-  }
-
   ul.menu-nav,
   div.menu-branding {
     float: none;
@@ -87,8 +69,16 @@
 
 // Smartphones
 @include mediaSm {
-  main#home h1 {
-    margin-top: 10vh;
+  main {
+    padding: 2rem;
+    #home h1 {
+      margin-top: 10vh;
+    }
+
+    .lg-heading {
+      margin-top: 1rem;
+      font-size: 5rem;
+    }
   }
 
   .projects {
